build_log.txt
C:\ProgramData\scoop\persist\zvm\data\master\lib\std\Build.zig:582:5: error: option 'raylib' has unsupported type: ?*Build.Dependency
    @compileError("option '" ++ field.name ++ "' has unsupported type: " ++ @typeName(field.type));
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    addUserInputOptionFromArg__anon_141767: C:\ProgramData\scoop\persist\zvm\data\master\lib\std\Build.zig:569:46
    userInputOptionsFromArgs__anon_119000: C:\ProgramData\scoop\persist\zvm\data\master\lib\std\Build.zig:422:34
    9 reference(s) hidden; use '-freference-trace=11' to see all references
C:\Users\donald\AppData\Local\zig\p\raylib-5.6.0-dev-whq8uCg2ywTzCiX3VEP9RuCMXR6_VnDBmkj8GjL_p5QN\build.zig:109:27: error: root source file struct 'mem' has no member named 'trimLeft'
        var flag = std.mem.trimLeft(u8, line, " \t"); // Trim whitespace
                   ~~~~~~~^~~~~~~~~
C:\ProgramData\scoop\persist\zvm\data\master\lib\std\mem.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:403:16: error: no field or member function named 'linkLibC' in 'Build.Step.Compile'
    raylib_test.linkLibC();
    ~~~~~~~~~~~^~~~~~~~~
C:\ProgramData\scoop\persist\zvm\data\master\lib\std\Build\Step\Compile.zig:1:1: note: struct declared here
const Compile = @This();
^~~~~
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:403:16: note: method invocation only supports up to one level of implicit pointer dereferencing
C:\Users\donald\AppData\Local\zig\p\raylib_zig-5.6.0-dev-KE8REL5MBQAf3p497t52Xw9P7ojndIkVOWPXnLiLLw2P\build.zig:403:16: note: use '.*' to dereference pointer
